package com.mysite.webapp.model;

public abstract class AbstractSection {
}
