@startuml

abstract class AbstractSection {
}

class Link {
    private final String title;
    private final String URL;
}

enum ContactType {
    PHONE("Телефон"),
    SKYPE("Skype"),
    EMAIL("Почта"),
    LINKEDIN("Профиль LinkedIn"),
    GITHUB("Профиль GitHub"),
    STACKOVERFLOW("Профиль Stackoverflow"),
    HOMEPAGE("Домашняя страница");

    private String title;
}

enum SectionType {
    PERSONAL("Личные качества"),
    OBJECTIVE("Позиция"),
    ACHIEVEMENT("Достижения"),
    QUALIFICATIONS("Квалификация"),
    EXPERIENCE("Опыт работы"),
    EDUCATION("Образование");

    private String title;
}

class Organization {
    private final Link linkOrganization;
    private final List<Position> positionList;
    }

class Position {
    private final LocalDate startDate;
    private final LocalDate endDate;
    private final String title;
    private final String description;
}

 class OrganizationSection extends AbstractSection {
        private final List<Organization> organizationList;
  }

  class Resume {
      private final String uuid;
      private String fullName;
      private final Map<SectionType, AbstractSection> contacts;
      private final Map<ContactType, String> sections;
      }

  class ListSection extends AbstractSection {
      private final List<String> contentList;
      }
 class TextSection extends AbstractSection {
          private final String content;
          }
 Resume *-- AbstractSection
 Resume *-- SectionType
 Resume *-- ContactType
 OrganizationSection *-- Organization
 Organization *-- Link
 Organization *-- Position
@enduml